<resources>
    <string name="app_name">Track Your Progress</string>
    <string name="action_settings">Settings</string>
    <string name="button_programs">Programs</string>
    <string name="button_createProgram">Create Program</string>
    <string name="button_alterProgram">Alter Program</string>
    <string name="exerciseHeader">Exercise</string>
    <string name="setsHeader">Sets</string>
    <string name="repsHeader">Reps</string>
    <string name="weightHeader">Weight</string>
    <string name="title_activity_create_program">CreateProgramActivity</string>
    <string name="edit">EDIT</string>
    <string name="create">CREATE</string>
    <string name="view">VIEW</string>
    <string name="createProgram">createProgram</string>
    <string name="editProgram">editProgram</string>
    <string name="viewProgram">viewProgram</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="exercise">Exercise</string>
    <string name="title_activity_select_week">SelectWeekActivity</string>
    <string name="title_activity_select_day">SelectDayActivity</string>
</resources>
