<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:id="@+id/exerciseInput" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/exercise"
                android:id="@+id/textView_exerciseTitle"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_exerciseInput" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/setsInput">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sets"
                android:id="@+id/textView_setsTitle"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_setsInput" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:id="@+id/repsInput">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/reps"
                android:id="@+id/textView_repsTitle"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_repsInput" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/weightInput">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/weight"
                android:id="@+id/textView_weightTitle"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_weightInput" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:id="@+id/button_addExercise"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:onClick="addExerciseToWorkout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView_exercise"
            android:layout_gravity="center_horizontal"
            android:width="130dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView_sets"
            android:width="80dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView_reps"
            android:width="80dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView_weight"
            android:width="80dp" />
    </LinearLayout>

</LinearLayout>