<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="printNamesToLogCat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="PROGRAM"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000"
        android:paddingTop="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewProgram">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton_viewProgram"
                android:src="@drawable/view_program"
                android:background="@null"
                android:padding="15dp"
                android:contentDescription="@string/viewProgram"
                android:onClick="viewProgram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/view"
                android:id="@+id/textView_viewProgram"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:onClick="viewProgram" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addProgram">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton_addProgram"
                android:scaleType="fitXY"
                android:src="@drawable/new_program"
                android:background="@null"
                android:contentDescription="@string/createProgram"
                android:onClick="createProgram"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/create"
                android:id="@+id/textView_addProgram"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_horizontal"
                android:onClick="createProgram"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editProgram">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton_editProgram"
                android:scaleType="fitXY"
                android:src="@drawable/edit_program"
                android:background="@null"
                android:padding="15dp"
                android:contentDescription="@string/editProgram"
                android:onClick="editProgram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/edit"
                android:id="@+id/textView_editProgram"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="clip_horizontal"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:onClick="editProgram" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="VIDEO"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000"
        android:paddingTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/play"
                android:layout_gravity="center_horizontal"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Play"
                android:id="@+id/textView5"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/camera"
                android:layout_gravity="center_horizontal"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Record"
                android:id="@+id/textView6"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="AUDIO"
        android:id="@+id/textView7"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/play"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Play"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/microphone"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Record"
                android:id="@+id/textView8"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>